--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practice Home Page</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Home- Branden Nassour Portfolio</title>
   </head>
+
   <body>
-    <h1>Home</h1>
+    <header>
+      <img src="./images/image000002.JPG"" alt="Picture of Me" width="48px" height="48px" />
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Home</h1>
+    </main>
   </body>
 </html>
