CSS begging reworked navbar for home page

--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
 
   <body>
     <header>
-      <img src="./images/image000002.JPG"" alt="Picture of Me" width="48px" height="48px" />
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="resume.html">Resume</a></li>
-        </ul>
-      </nav>
+      <div class="logo-wrap">
+        <img
+          src="./images/image000002.JPG"
+          alt="Navbar image"
+          class="nav-image"
+        />
+
+        <nav class="navbar">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html">Resume</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
+      <section>
+        <p class="display-text">
+          Product design * Frontend Development * User Experience
+        </p>
+        <button>View My Work</button>
+      </section>
       <h1>Home</h1>
     </main>
   </body>
