Assignment (Week 4): Contact Form & Coursework Table

--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="resume.html">Resume</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </div>
     </header>
     <main>
+      <h1>Home</h1>
       <section>
         <p class="display-text">
-          Product design * Frontend Development * User Experience
+          <center>
+            Product design * Frontend Development * User Experience
+          </center>
         </p>
         <button>View My Work</button>
       </section>
-      <h1>Home</h1>
     </main>
   </body>
 </html>
