--- a/resume.html
+++ b/resume.html
@@ -4,19 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume - Branden Nassour Portfolio</title>
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
     <header>
-      <img
-        src="./images/IMG_9533.jpeg"
-        alt="Description"
-        width="48px"
-        height="48px"
-      />
-      <nav>
+      <img src="./images/IMG_9533.jpeg" alt="Description" class="resume-img" />
+      <nav class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="resume.html">Resume</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -26,7 +23,7 @@
       <section>
         <h2>Education</h2>
         <h3><strong>Junior</strong>, University of Montana</h3>
-        <p>August 2025 - Expected Graduation Date of 2027</p>
+        <p>Ausust 2025 - Expected Graduation Date of 2027</p>
         <p>(3.8) GPA</p>
         <p>Degree: <strong>Bachelors Computer Science</strong></p>
         <br />
@@ -52,18 +49,18 @@
         <ul>
           <li>
             <p>
-              Used counting and patented software to perform invenory
+              Used counting and patented software to perform inventory
               adjustments for business.
             </p>
           </li>
         </ul>
 
         <br />
-        <h3><strong>Webdesign Courses</strong>, Helena College</h3>
+        <h3><strong>Web Design Courses</strong>, Helena College</h3>
         <ul>
           <li>
             <p>
-              Took multiple Webd Design and Graphic Desgin course at Helena
+              Took multiple Web Design and Graphic Desgin course at Helena
               College before transfering to the University of Montana to
               continue a degree in Web Development.
             </p>
@@ -74,7 +71,9 @@
       <section>
         <!--Previous Work History-->
         <h2>Work History</h2>
-        <h3><strong>Print Specalist and Retail Associate</strong>, Butte MT</h3>
+        <h3>
+          <strong>Print Specialist and Retail Associate</strong>, Butte MT
+        </h3>
         <p><strong>1.5 years</strong></p>
         <p>
           Designed specalized vinyl print deisgns for companies and events,
@@ -86,9 +85,9 @@
         <p><strong> 8 Months</strong></p>
         <p>
           Worked independatlty and in small groups to correct the inventory of
-          the Buisness through hand and automated counts store wide. Preformed
+          the Buisness through hand and automated counts store wide. Performed
           other tasks as receieving products for departments and construction of
-          tempary outside garden center Garden Center.
+          temporary outside garden center Garden Center.
         </p>
         <br />
         <h3><strong>Lawn and Garden</strong>, Missoula MT</h3>
@@ -98,6 +97,35 @@
           lift user and other lifting equipment from Lowes.
         </p>
         <br />
+      </section>
+      <section>
+        <h2><center>Relevant Courses</center></h2>
+        <table class="courses-table">
+          <thead>
+            <tr>
+              <th colspan="2">Relevant Courses</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Web Design and Programming</td>
+              <td>Web Development</td>
+            </tr>
+            <tr>
+              <td>Digital Imaging</td>
+              <td>Intro to Adobe</td>
+            </tr>
+            <tr>
+              <td>Computer Ethics</td>
+              <td>Intro to Programming (Python)</td>
+            </tr>
+            <tr>
+              <td>Intro to Programming (Java)</td>
+              <td>Data structures</td>
+            </tr>
+          </tbody>
+        </table>
       </section>
     </main>
   </body>
