Assignment (Week 5): Project Cards & Sticky Header

--- a/index.html
+++ b/index.html
@@ -33,7 +33,32 @@
             Product design * Frontend Development * User Experience
           </center>
         </p>
-        <button>View My Work</button>
+      </section>
+      <section id="projects" class="projects-section">
+        <h2>Projects</h2>
+
+        <div class="projects-container">
+          <div class="project-card">
+            <h3>Portfolio of currently managed</h3>
+            <p>Links to websites I currently manage or have contributed to.</p>
+            <a href=".html">View Project</a>
+          </div>
+
+          <div class="project-card">
+            <h3>Home Page Design</h3>
+            <p>Home page desgigns I have worked on in the pass</p>
+            <a href=".html">View Project</a>
+          </div>
+
+          <div class="project-card">
+            <h3>File Converter</h3>
+            <p>
+              Simply drag a file and it converts the file into the chosen file
+              if applicable
+            </p>
+            <a href=".html">View Project</a>
+          </div>
+        </div>
       </section>
     </main>
   </body>
